# MLsem

./: .gitignore  LICENSE  Makefile  README.md  bench.sh  dune-project  mlsem-app.opam  mlsem-common.opam  mlsem-lang.opam  mlsem-system.opam  mlsem-types.opam  mlsem-types.opam.template  mlsem.opam  test.ml
.github/workflows/: webeditor.yml
src/common/: env.ml  env.mli
src/lib/app/: dune  mlsem_app.ml
src/lib/app/main/: config.ml  main.ml  main.mli
src/lib/app/parsing/: IO.ml  IO.mli  PAst.ml  PAst.mli  dune  lexer.mll  parser.mly  transform.ml  transform.mli
src/lib/core/: dune  mlsem.ml
src/lib/core/common/: common.ml  dune  eid.ml  eid.mli  env.ml  env.mli  mlsem_common.ml  var.ml  var.mli
src/lib/core/lang/: ast.ml  ast.mli  config.ml  const.ml  const.mli  dune  mAst.ml  mAst.mli  mVariable.ml  mVariable.mli  optimize.ml  optimize.mli  transform.ml  transform.mli
src/lib/core/system/: analyzer.ml  analyzer.mli  annot.ml  annot.mli  ast.ml  ast.mli  caching.ml  caching.mli  checker.ml  checker.mli  config.ml  dune  reconstruction.ml  reconstruction.mli  refinement.ml  refinement.mli
src/lib/core/types/: base.ml  base.mli  builder.ml  builder.mli  dune  gTy.ml  gTy.mli  gradual.ml  gradual.mli  mlsem_types.ml  recording.ml  recording.mli  recording_internal.ml  scheme.ml  scheme.mli  tvar.ml  tvar.mli  tyScheme.ml  tyScheme.mli  types.ml
src/lib/core/utils/: utils.ml
src/lib/lang/main/: main.ml
src/lib/lang/parsing/: PAst.ml  PAst.mli  lexer.mll  parser.mly  transform.ml
src/lib/utils/: dune  utils.ml
src/main/: dune  js.ml  lib_js.ml  main.ml  prototype.ml  wasm.ml  web.ml
src/main/stubs/: dune
src/parsing/: IO.ml  ast.ml  ast.mli  dune  lexer.mll  parser.mly  transform.ml  transform.mli  variable.ml  variable.mli
src/system/: analyzer.ml  analyzer.mli  annot.ml  annot.mli  ast.ml  ast.mli  caching.ml  caching.mli  checker.ml  checker.mli  config.ml  domain.ml  domain.mli  dune  env.ml  env.mli  partition.ml  partition.mli  reconstruction.ml  reconstruction.mli  refinement.ml  refinement.mli  variable.mli
src/system/utils/: eid.ml  env.ml  env.mli  position.ml  variable.ml
src/types/: additions.ml  additions.mli  base.ml  base.mli  builder.ml  builder.mli  gradual.ml  gradual.mli  tvar.ml  tvar.mli  tyScheme.ml  tyScheme.mli  types.ml
src/utils/: config.ml  dune  eid.mli  utils.ml
tests/: 0_dyn.ml  0_hm.ml  1_hm.ml  1_union_inter.ml  2_dyn.ml  2_mono.ml  3_records.ml
webeditor/: .gitignore  codelens.js  doc.html  index.html  main.js  tokenizer.js
webeditor/examples/: functional.stml  gradual.stml  imperative.stml  imperative_advanced.stml  list.json  records.stml
