(library
 (name main)
 (public_name mlsem)
 (wrapped false)
 (libraries types parsing utils system)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (modules main))

(executable
 (name prototype)
 (libraries main)
 (modules prototype))

(executable
 (name js)
 (libraries main yojson zarith_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modules js))

(executable
 (name wasm)
 (libraries main yojson zarith_wasm)
 (modes wasm)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modules wasm))

(env
 (_
  (js_of_ocaml
   (flags
    (:standard --effects=cps))
   (compilation_mode whole_program)
   (build_runtime_flags
    (:standard --effects=cps)))
  (wasm_of_ocaml
   (flags
    (:standard --effects=cps))
   (compilation_mode whole_program)
   (build_runtime_flags
    (:standard --effects=cps)))
  ; TODO: --effects=jspi fails with an illegal cast
  ))