(library
 (name main)
 (public_name mlsem)
 (wrapped false)
 (libraries types parsing utils system)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (modules main config))

(executable
 (name prototype)
 (libraries main)
 (modules prototype))

(library
 (name web)
 (wrapped false)
 (libraries main yojson)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modules web))

(executable
 (name js)
 (libraries web zarith_js)
 (modes js)
 (modules js))

(executable
 (name wasm)
 (libraries web zarith_wasm)
 (modes wasm)
 (modules wasm))

(env
 (_
  (js_of_ocaml
   (flags
    (:standard --effects=cps))
   (compilation_mode whole_program)
   (build_runtime_flags
    (:standard --effects=cps)))
  (wasm_of_ocaml
   (flags
    (:standard --effects=cps))
   (compilation_mode whole_program)
   (build_runtime_flags
    (:standard --effects=cps)))
  ; TODO: --effects=jspi fails with an illegal cast
  ))