(library
 (name zarith_js)
 (js_of_ocaml
  (javascript_files ./runtime.js)
  ; (flags --no-sourcemap)
 )
 (libraries)
 (preprocess no_preprocessing))

(library
 (name zarith_wasm)
 (wasm_of_ocaml
  (wasm_files ./runtime_wasm.js ./runtime.wat)
  (javascript_files ./runtime.js)
  ; (flags --no-sourcemap)
 )
 (libraries)
 (preprocess no_preprocessing))
